# 2048-cpp

./: CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/core/: Application.cpp  Application.h  Entry.h
engine/core/logger/: Logger.cpp  Logger.h
engine/window/: GLFWPlatformWindow.cpp  Window.cpp  Window.h  WindowPlatform.cpp  WindowPlatform.h
game/: CMakeLists.txt
game/src/: Game.cpp
proto/: score.proto
src/: Application.cpp  Application.h  ApplicationClient.cpp  ApplicationClient.h  ApplicationServer.cpp  ApplicationServer.h  CMakeLists.txt  Client.cpp  Client.h  Logger.cpp  Logger.h  Main.cpp  Server.cpp  Server.h  Service.cpp  Service.h  ServiceClient.cpp  ServiceClient.h  ServiceServer.cpp  ServiceServer.h  Tile.cpp  Tile.h  Window.cpp  Window.h  WindowClient.cpp  WindowClient.h  WindowServer.cpp  WindowServer.h
